# SKLAD_25_09

./: .editorconfig  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  SERVER_GUIDE.md  SIMPLE_GUIDE.md  env.example  pyproject.toml
alembic/versions/: 000_initial_migration.py  001_add_order_fields.py
app/: config.py  main.py
app/routers/: __init__.py
docs/: _deleted_log.md  _inventory.md  _plan.md  _python_deleted.md  _python_inventory.md  _python_plan.md  _python_summary.md  _scripts_deleted.md  _scripts_inventory.md  _scripts_plan.md  _scripts_summary.md  _summary.md
scripts/_backup_20250925/: auto_commands.bat  setup_auto_mode.ps1
scripts/win/: restart_server.cmd  serve_status.cmd
